Fix some issues
Style the scrollbars - leave the thumb only
Remove the html always shown scrollbar (reproduced in Linux)
Use already existing variables for the colors

--- a/messenger/darkmode.css
+++ b/messenger/darkmode.css
@@ -26,13 +26,25 @@
     --web-wash: #1e1e1e;
 }
 
+html::-webkit-scrollbar {
+    display: none;
+}
+
+::-webkit-scrollbar {
+    background: var(--popover-background);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--scroll-thumb);
+}
+
 body {
-    color: #cecece;
+    color: var(--primary-text);
 }
 
 /* Delivered icon on left*/
 .rq0escxv.l9j0dhe7.du4w35lb.j83agx80.cbu4d94t.pfnyh3mw.d2edcug0.hpfvmrgz.aovydwv3.p8cu3f6v.kb5gq1qc.taijpn5t.b0upgy8r path, .l9j0dhe7.swg4t2nn path, .a8c37x1j.ms05siws.hwsy1cff.b7h9ocf4 path {
-    fill: #cecece;
+    fill: var(--primary-text);
 }
 
 path[d="M0 36h36V0H0z"] {
@@ -41,7 +53,7 @@ path[d="M0 36h36V0H0z"] {
 
 /* Icons */
 path[d="M18 30c-6.627 0-12-5.372-12-12 0-6.627 5.373-12 12-12 6.628 0 12 5.373 12 12 0 6.628-5.372 12-12 12zm5.294-16.707l-7.296 7.295-3.254-3.252c-.352-.353-.919-.439-1.323-.148a1 1 0 00-.128 1.522l3.998 3.997a1 1 0 001.414 0l8.002-8.001a1 1 0 10-1.413-1.413z"] {
-    fill: #999;
+    fill: var(--secondary-text);
 }
 
 .sp_o5t_XtHjhxN_1_5x {
@@ -50,16 +62,16 @@ path[d="M18 30c-6.627 0-12-5.372-12-12 0-6.627 5.373-12 12-12 6.628 0 12 5.373 1
 
 /* App download */
 .oajrlxb2.q2y6ezfg.gcieejh5.bn081pho.humdl8nn.izx4hr6d.rq0escxv.nhd2j8a9.j83agx80.p7hjln8o.kvgmc6g5.cxmmr5t8.oygrvhab.hcukyx3x.jb3vyjys.d1544ag0.qt6c0cv9.tw6a2znq.i1ao9s8h.esuyzwwr.f1sip0of.lzcic4wl.l9j0dhe7.abiwlrkh.p8dawk7l.beltcj47.p86d2i9g.aot14ch1.kzx2olss.cbu4d94t.taijpn5t.ni8dbmo4.stjgntxs.k4urcfbm.tv7at329 {
-    background: #1e1e1e;
+    background: var(--popover-background);
 }
 
 .sn0e7ne5 {
-    box-shadow: rgba(0, 0, 0, 0.6) 0px 0px 2px;
+    box-shadow: var(--shadow-5) 0px 0px 2px;
 }
 
 /* Middle header */
 .bafdgad4 {
-    box-shadow: 0 0 4px rgba(0,0,0,.7)
+    box-shadow: 0 0 4px var(--shadow-5);
 }
 
 /* Pop-up close icon */
